# bsmcmp

./: LICENSE  pyproject.toml  readme.md
bsmcmp/: __main__.py  ascii.py  base.py  csv.py  geotiff.py  grib2.py  h5.py  mat.py  netcdf.py  utility.py  version.py
